--- a/PagCadastro/index.html
+++ b/PagCadastro/index.html
@@ -47,7 +47,7 @@
                             placeholder="Confirme sua senha" aria-label="Confirme sua senha">
                         </div>
                     </div>
-                    <button class="btn btn-warning" onclick="cadastro()">
+                    <button class="btn btn-warning text-white" onclick="cadastro()">
                         Cadastrar-se
                     </button>
                 </div>
